--- a/jplag_catcher/templates/jplag_catcher/index.html
+++ b/jplag_catcher/templates/jplag_catcher/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CopyCATcher</title>
+    <script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
 
     <!-- Bootstrap core CSS -->
 <link href="{% static 'jplag_catcher/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -53,10 +54,8 @@
 
   <footer class="mt-auto text-white-50">
     <p>Template by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+    <p><a class="text-white" href="https://github.com/tustunkok/copy-catcher" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
   </footer>
 </div>
-
-
-    
   </body>
 </html>
