Update v0.1.1: If no files generated by the JPlag, the JPlag log will be displayed.

--- a/jplag_catcher/templates/jplag_catcher/index.html
+++ b/jplag_catcher/templates/jplag_catcher/index.html
@@ -54,7 +54,7 @@
 
   <footer class="mt-auto text-white-50">
     <p>Template by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
-    <p><a class="text-white" href="https://github.com/tustunkok/copy-catcher" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
+    <p>CopyCATher v0.1.1 <a class="text-white" href="https://github.com/tustunkok/copy-catcher" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
   </footer>
 </div>
   </body>
